--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-.example {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3; 
-    overflow: hidden;
-  }
+/* styles.css */
+.btn-primaryss {
+  @apply px-4 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-700 transition duration-300;
+}
